--- a/.github/workflows/stale-repo.yml
+++ b/.github/workflows/stale-repo.yml
@@ -21,8 +21,10 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           ORGANIZATION: ${{ secrets.ORGANIZATION }}
           EXEMPT_TOPICS: 'keep,template'
-          INACTIVE_DAYS: 365
+          INACTIVE_DAYS: 120
           ADDITIONAL_METRICS: 'release,pr'
+          ACTIVITY_METHOD: 'default_branch_updated'
+          WORKFLOW_SUMMARY_ENABLED: true
 
       - name: Print output of stale_repos tool
         run: echo "${{ steps.stale-repos.outputs.inactiveRepos }}"
@@ -32,12 +34,11 @@ jobs:
             const repos = ${{ steps.stale-repos.outputs.inactiveRepos }}
             for (const repo of repos) {
               console.log(repo);
-              const issue = await github.rest.issues.create({
+              const request = await github.rest.repos.update({
                 owner: <ORG_OWNER>,
                 repo: <REPOSITORY>,
-                title: 'Stale repo' + repo.url,
-                body: 'This repo is stale. Please contact the owner to make it active again.',
+                archived: true
               });
-              console.log(issue);
+              console.log(request);
             }
           github-token: ${{ secrets.GH_TOKEN }}
